--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Logo.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/src/assets/Logo.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
     <title>Transfo Zwevegem</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png" />
+    <link rel="manifest" href="/src/assets/site.webmanifest" />
+    <link rel="mask-icon" href="/src/assets/safari-pinned-tab.svg" color="#b84626" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="root"></div>
