--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
   <meta name="theme-color" content="#ffffff">
-
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="assets/env.js"></script>
 </head>
 
 <body>
